# TEC-Mod2-Todos

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: main_todo.py
src/data/: my_list.csv
tests/: test_list.py
tests/integration/: test_integration.py
tests/unit/: test_unit.py
tests/unit/data/: todos.csv
