[tool.poetry]
name = "tec-mod2-todos"
version = "0.1.0"
description = "ML Modulo 2"
authors = ["Alex Castro Gumiel"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/"}, 
            {include = "tests/"}]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
typer = "^0.7.0"
pandas = "1.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pyment = "^0.3.3"
interrogate = "^1.5.0"
pycodestyle = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
